// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > MultipleErrors 1`] = `
<div>
  <ul
    aria-label="Validation errors of field undefined"
    data-testid="undefined_error"
  >
    <li
      style="overflow: hidden;"
    >
      <div
        class="px-1 pt-1"
      >
        first error
      </div>
    </li>
    <li
      style="overflow: hidden;"
    >
      <div
        class="px-1 pt-1"
      >
        second error
      </div>
    </li>
  </ul>
</div>
`;

exports[`Story Snapshots > SingleError 1`] = `
<div>
  <ul
    aria-label="Validation errors of field undefined"
    data-testid="undefined_error"
  >
    <li
      style="overflow: hidden;"
    >
      <div
        class="px-1 pt-1"
      >
        single error message
      </div>
    </li>
  </ul>
</div>
`;
